feat(NOT-384): Setting up integration points for new services
