# docs/pso/openapi.yml
@@ -14,6 +14,12 @@ securitySchemes:
 security:
   - MutualTLS: []
 
+tags:
+  - name: MVP
+    description: Core feature sets that's currently enabled 
+  - name: Groups
+    description: Feature enabling sending notification to user groups with a single request (work in progress)
+
 paths:
   /status:
     get:
@@ -51,6 +57,46 @@ paths:
               maxItems: 10
               items:
                 $ref: '#/components/schemas/MessageRequest'
+        required: true
+      responses:
+        '202':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                minItems: 1
+                maxItems: 10
+                items:
+                  $ref: '#/components/schemas/MessageRequestResponse'
+        '400':
+          description: Bad Request Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+
+  /v1/send-to-group:
+    post:
+      summary: Sends notifications to target group
+      operationId: postGroupMessage
+      tags:
+        - Groups
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              minItems: 1
+              maxItems: 10
+              items:
+                $ref: '#/components/schemas/GroupMessageRequest'
         required: true
       responses:
         '202':
@@ -165,23 +211,15 @@ components:
       properties:
         status:
           type: boolean
-    MessageRequest:
+    MessageRequestProperties:
       type: object
       required:
-        - UserID
         - NotificationTitle
         - NotificationBody
       properties:
         DepartmentID:
           type: string
           description: (Optional) ID of department sending notification
-        NotificationID:
-          type: string
-          description: ID of the notification to be used for idempotency & analytics, ID will be dynamically generated if one has not been supplied
-          format: uuid
-        UserID:
-          type: string
-          description: ID of the recipient fetched from UDP
         CampaignID:
           type: string
           description: (Optional) ID of the associated campaign
@@ -197,6 +235,46 @@ components:
         MessageBody:
           type: string
           description: (Optional) Contents of the message displayed in the GovUK app's notification centre, falls back on notification body
+    MessageRequest:
+      allOf:
+        - $ref: '#/components/schemas/MessageRequestProperties'
+        - type: object
+          required:
+            - UserID
+          properties:
+            NotificationID:
+              type: string
+              description: ID of the notification to be used for idempotency & analytics, ID will be dynamically generated if one has not been supplied
+              format: uuid
+            UserID:
+              type: string
+              description: ID of the recipient fetched from UDP
+    GroupMessageRequest:
+      allOf:
+        - $ref: '#/components/schemas/MessageRequestProperties'
+        - type: object
+          required:
+            - Namespace
+            - Group
+          properties:
+            GroupNotificationID:
+              type: string
+              description: (Optional) - Group Notification ID can be supplied in UUID form to guaranteed idempotency
+              format: uuid
+            Namespace:
+              type: string
+              description: Namespace name of the recipients
+            Group:
+              type: string
+              description: Group name of the recipients
+            Subgroup:
+              type: string
+              description: Group name of the recipients
+    GroupMessageRequestResponse:
+      type: object
+      properties:
+        GroupNotificationID:
+          type: string
     MessageRequestResponse:
       type: object
       properties:
